<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/song_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:tint="@color/colorPrimary"
        android:src="@drawable/ic_album"
        android:contentDescription="@string/album_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/song_time_tv"
        app:layout_constraintBottom_toBottomOf="@id/song_artist_tv"/>
    <TextView
        android:id="@+id/song_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/song"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/song_logo"
        app:layout_constraintStart_toEndOf="@id/song_logo"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/song_artist_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/artist"
        app:layout_constraintTop_toBottomOf="@id/song_time_tv"
        app:layout_constraintStart_toEndOf="@id/song_logo"
        app:layout_constraintLeft_toRightOf="@id/song_logo"
        />
    <ImageView
        android:id="@+id/more_options_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        android:tint="@color/colorPrimary"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/more_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/song_time_tv"
        app:layout_constraintBottom_toBottomOf="@id/song_artist_tv"
        />



</androidx.constraintlayout.widget.ConstraintLayout>