<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongPlayingActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
      <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toTopOf="@id/play_progress_bar"/>
    <TextView
        android:id="@+id/play_time_elapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:text="00:00"
        android:layout_marginBottom="8dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/play_progress_bar"
        app:layout_constraintStart_toStartOf="@id/play_progress_bar"
        app:layout_constraintLeft_toLeftOf="@id/play_progress_bar"
        />
    <TextView
        android:id="@+id/play_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="8dp"
        android:text="00:00"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/play_progress_bar"
        app:layout_constraintEnd_toEndOf="@id/play_progress_bar" />

    <ProgressBar
        android:id="@+id/play_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/play_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
        <LinearLayout
            android:id="@+id/play_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <ImageButton
                android:id="@+id/shuffle_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shuffle"
                android:layout_weight="1"
                android:contentDescription="@string/shuffle_btn"
                android:padding="8dp"/>
            <ImageButton
                android:id="@+id/previous_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_previous"
                android:contentDescription="@string/play_previous"
                android:layout_weight="1"
                android:padding="8dp"/>
            <ImageButton
                android:id="@+id/play_pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pause"
                android:layout_weight="1"
                android:contentDescription="@string/play_btn"
                android:padding="8dp"/>
            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next"
                android:contentDescription="@string/play_next"
                android:layout_weight="1"
                android:padding="8dp"/>
            <ImageButton
                android:id="@+id/repeat_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_repeat"
                android:contentDescription="@string/repeat"
                android:layout_weight="1"
                android:padding="8dp"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>